--- a/new_server/.env
+++ b/new_server/.env
@@ -1,4 +1,4 @@
-MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_PASSWORD=Raj@142181
-MYSQL_DBNAME=stiller
+MYSQL_DBNAME="stiller"
+MYSQL_HOST="aaok.cqbyrq1rhiy1.us-east-2.rds.amazonaws.com"
+MYSQL_PASSWORD="12345678"
+MYSQL_USER="admin"
